syntax = "proto3";

option csharp_namespace = "MyApp.WebApi.Grpc";

package images;

message ImageDto {
  string id = 1;
  string title = 2;
  string fileName = 3;
  string contentType = 4;
  int64 sizeBytes = 5;
  string uploadedAt = 6;
}

message ListImagesRequest {}

message ListImagesResponse {
  repeated ImageDto items = 1;
}

message GetImageRequest {
  string id = 1;
}

service ImagesGrpc {
  rpc List (ListImagesRequest) returns (ListImagesResponse);
  rpc Get (GetImageRequest) returns (ImageDto);
}
